Wed Mar 20 17:49:43 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: Art Haas pointed a stupid error

Tue Mar 19 19:42:01 CET 2002 Daniel Veillard <daniel@veillard.com>

	* Makefile.am tests/Makefile.am tests/*/Makefile.am
	  tests/*/*/Makefile.am : added "make valgrind" targets
	  to run the test suite under the debugger control
	* transform.c: valgrind spotted 2 bugs, one related to
	  the ordering of the deallocation of the data associated to
	  a transofrmation, the second in xsltCopyTree when the new
	  node may have been coalesced with an adjacent text node.
	  The regression tests now pass cleanly under testgrind.

Mon Mar 18 21:33:38 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: fixed a stupid bug

Mon Mar 18 20:45:27 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.14
	* doc/*: updated rebuilt
	* libxslt/*.c libexslt/*.c libxslt/libxslt.h libexslt/libexslt.h:
	  implemented the IN_LIBXSLT and IN_LIBEXSLT mechanism discussed
	  with the Windows maintainers

Mon Mar 18 16:22:46 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am python/generator.py python/libxslt.c
	  python/types.c python/tests/Makefile.am: applied the same kind of
	  fixes to the Python Makefiels than to libxml2 ones. Updates
	  and cleanups too.

Sat Mar 16 23:48:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/common.c libxslt/pattern.c  libxslt/transform.c
	  libxslt/variables.c: chaing result tree values which may
	  be deallocated and must not be kept in the template 
	  pattern lookup cache. Thanks to Valgrin to allow finding
	  the real problem in bug #74857

Wed Mar 13 15:17:51 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/*.h doc/* python/*: applied another cleanup comment
	  diff from Heiko W. Rupp, regenerated the API and python

Wed Mar 13 13:41:19 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-76.xml