@@ -77,6 +77,7 @@ EXTRA_DIST =	\
 	bug-74.xml \
 	bug-75.xml \
 	bug-76.xml \
+	bug-77.xml \
 	character.xml \
 	array.xml \
 	items.xml
