@@ -80,6 +80,7 @@ EXTRA_DIST = \
     bug-74.out bug-74.xsl \
     bug-75.out bug-75.xsl \
     bug-76.out bug-76.xsl \
+    bug-77.out bug-77.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
