@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<foo>
+<bar xml:lang="en" id="Wowie">Hi</bar>
+<bar xml:lang="fr" id="Zowie">bonjour</bar>
+</foo>
