@@ -1,3 +1,10 @@
+Thu Mar 21 00:25:12 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/transform.c: fixing bug #75603
+	* tests/docs/Makefile.am tests/docs/bug-77.xml
+	  tests/general/Makefile.am tests/general/bug-77.*: added a 
+	  specific example for bug #75603 in the regression tests
+
 Wed Mar 20 17:49:43 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* python/Makefile.am: Art Haas pointed a stupid error
